better json schema gen